@@ -34,6 +34,7 @@ extern  int     CONFIG_SERVER_STARTUP_TIME;
 
 /*int	evaluate_function(char *value, DB_ITEM *item, char *function, char *parameter, int now);*/
 int	evaluate_function2(char *value,char *host,char *key,char *function,char *parameter);
+int	replace_value_by_map(char *value, zbx_uint64_t valuemapid);
 int	add_value_suffix(char *value, int max_len, char *units, int value_type);
 
 #endif
